2016-11-09 Kevin De Vasconcelos Corga <kevin.devasconcelos@cern.ch>
	* added b-tagging scale factors for MV2c10 60% and 85% WP

2016-11-08 Robert Wolff <robert.wolff@cern.ch>
	* added more lep+tau triggers
	* added trigger matching for dilepton triggers (lep.isTrigMatchDLT_X)

2016-11-05 Babar Ali <babar.ali@cern.ch>
	* added isHadronic info in flat vars.

2016-11-03 Robert Wolff <robert.wolff@cern.ch>
	* added additional triggers (dilepton and lepton+tau)
	* updated for AnalysisTop, 2.4.21
	* updated GRL and iLumiCalc file for full 2016 luminosity
	* added electron Charge Flip Tagger Tool BDT output
	* added truth H,Top,W,Z count for truth jets

2016-10-18 Robert Wolff <robert.wolff@cern.ch>
	* added dilepton trigger HLT_e26_lhmedium_nod0_L1EM22VHI_mu8noL1

2016-10-14 Robert Wolff	<robert.wolff@cern.ch>
	* fix tag for one MC sample in submission
	* added latest TopDataPreparation package to manual checkout for Vgamma samples

2016-10-12 Robert Wolff <robert.wolff@cern.ch>
	* fix rc checkout in setupRCandGrid.sh

2016-10-11 Robert Wolff <robert.wolff@cern.ch>
	* added samples (request by Ximo)
	* added bad electron handling without crashing

2016-10-06 Babar Ali <babar.ali@cern.ch>
	* Added New GRL and ilumiCalc file. 
	* Updated The GRL and lumiCalc files in share/config files and also in Data16.py

2016-09-16 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Add new datasets in Data16.py and new MC in MC_ichep.py

2016-09-12 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Move to post-ICHEP trigger pT thresholds for 2016
	* Add new 2016 GRL (v82-pro20-12, 18857.4 pb-1) and ilumicalc file

2016-08-18 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
	* Move to AT,2.4.18
	* Add new 2016 GRL (v81, 15019.8 pb-1) and ilumicalc file

2016-08-10 Robert Wolff <robert.wolff@cern.ch>
	* add lowest unprescaled triggers in triggermatching for high-lumi runs
	* add some tH and VVV samples to submission scripts
