@@ -1,3 +1,6 @@
+2016-11-10 Robert Wolff <robert.wolff@cern.ch>
+	* added additional packages and updated submission scripts
+
 2016-11-09 Kevin De Vasconcelos Corga <kevin.devasconcelos@cern.ch>
 	* added b-tagging scale factors for MV2c10 60% and 85% WP
 
